Pacote de stickers/style.css
@charset "UTF-8";

* {
    margin: 0;
    padding: 0;
    font-family: "Poppins", sans-serif;
}

body {
    height: 100%;
    margin: 42px 32px;
    box-sizing: border-box;
    text-align: center;
}

.author-info {
    font-size: 14px;
    text-align: center;
    margin-top: 16px;
    color: rgb(55, 65, 81);
}

.author-info a {
    text-decoration: none;
}


h1{
    font-size: 2.25rem;
    font-weight: 600;

    max-width: 650px;
    margin: auto;
    text-align: center;
}

img#separador {
    margin: 30px 0px;
}

section.articles {
    display: flex;
    flex-direction: column;
    gap: 40px;
    max-width: 750px;
    margin: auto;
}

div.article {
    display: flex;
    flex-direction: row;
    text-align: left;
    align-items: center;
    gap: 50px;
}

div.article > img {
    border-radius: 8px;
}

div.textos {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

h2.titulos {
    font-size: 1.25rem;
}

p.publicacaodata {
    font-size: 0.875rem;
}

